# nordic-lens

./: .env.example  .gitignore  README.md  pyproject.toml  snowflake_setup.sql
.github/workflows/: ci.yml  dbt_ci.yml
.streamlit/: secrets.toml.example
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: dag_anomaly_detection.py  dag_daily_ingestion.py  dag_dbt_transform.py
airflow/dbt_profiles/: profiles.yml
dashboard/: app.py
dbt_project/: dbt_project.yml  exposures.yml
dbt_project/macros/: generate_surrogate_key.sql  test_assert_transaction_amount_positive.sql
dbt_project/models/marts/: dim_customers.sql  dim_merchants.sql  fct_transactions.sql  rpt_financial_health_kpis.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_macro_rates.sql  stg_transactions.sql
dbt_project/snapshots/: customer_snapshot.sql
dbt_project/tests/generic/: assert_transaction_amount_positive.sql
ingestion/: __init__.py
ingestion/extractors/: __init__.py  norges_bank_api.py  ssb_api.py  transaction_simulator.py
ingestion/loaders/: __init__.py  s3_uploader.py  snowflake_loader.py
tests/: test_anomaly_logic.py  test_ssb_api.py  test_transaction_simulator.py
